--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -27,7 +27,7 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #333;
+  background-image: url("../imagenes/fondo1.jpg");
 }
 body {
   color: #fff;
@@ -56,6 +56,7 @@ body {
 /* Padding for spacing */
 .inner {
   padding: 2rem;
+
 }
 
 
@@ -108,7 +109,11 @@ body {
  */
 
 .cover {
-  padding: 0 1.5rem;
+    padding: 0 1.5rem;
+    border-radius: 20px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    background-color: rgba(64,64,64,0.4);
 }
 .cover .btn-lg {
   padding: .75rem 1.25rem;
