--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,14 @@
 doctype html
 html(lang="en")
-	head
-		title Recetario Interactivo
-	body
-		h1 Hola mundo con pug
+    head
+        title Recetario interactivo
+        meta(chasrset="utf-8")
+        meta( name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
+
+        link (href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet")
+        link (href="css/3-col-portfolio.css" rel="stylesheet")
+
+    body
+         nav(class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top")
+            div(class="container")
+               a(href="#" class="navbar-brand") Start Bootstrap
