--- a/views/graphics.pug
+++ b/views/graphics.pug
@@ -6,114 +6,23 @@ html(lang='en')
     meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
     meta(name='description', content='')
     meta(name='author', content='')
-    title SB Admin - Start Bootstrap Template
+    title Recetario interactivo
     // Bootstrap core CSS
     link(href='vendor/bootstrap/css/bootstrap.min.css', rel='stylesheet')
     // Custom fonts for this template
     link(href='vendor/font-awesome/css/font-awesome.min.css', rel='stylesheet', type='text/css')
     // Custom styles for this template
     link(href='graficos/css/sb-admin.css', rel='stylesheet')
+
   body#page-top.fixed-nav.sticky-footer.bg-dark
-    // Navigation
-    nav#mainNav.navbar.navbar-expand-lg.navbar-dark.bg-dark.fixed-top
-      a.navbar-brand(href='/inicio') Start Bootstrap
-      button.navbar-toggler.navbar-toggler-right(type='button', data-toggle='collapse', data-target='#navbarResponsive', aria-controls='navbarResponsive', aria-expanded='false', aria-label='Toggle navigation')
-        span.navbar-toggler-icon
-      #navbarResponsive.collapse.navbar-collapse
-        ul#exampleAccordion.navbar-nav.navbar-sidenav
-          li.nav-item(data-toggle='tooltip', data-placement='right', title='Charts')
-            a.nav-link(href='charts.html')
-              i.fa.fa-fw.fa-area-chart
-              span.nav-link-text Charts
-        ul.navbar-nav.sidenav-toggler
-          li.nav-item
-            a#sidenavToggler.nav-link.text-center
-              i.fa.fa-fw.fa-angle-left
-        ul.navbar-nav.ml-auto
-          li.nav-item.dropdown
-            a#messagesDropdown.nav-link.dropdown-toggle.mr-lg-2(href='#', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
-              i.fa.fa-fw.fa-envelope
-              span.d-lg-none
-                | Messages
-                span.badge.badge-pill.badge-primary 12 New
-              span.indicator.text-primary.d-none.d-lg-block
-                i.fa.fa-fw.fa-circle
-            .dropdown-menu(aria-labelledby='messagesDropdown')
-              h6.dropdown-header New Messages:
-              .dropdown-divider
-              a.dropdown-item(href='#')
-                strong David Miller
-                span.small.float-right.text-muted 11:21 AM
-                .dropdown-message.small
-                  | Hey there! This new version of SB Admin is pretty awesome! These messages clip off when they reach the end of the box so they don't overflow over to the sides!
-              .dropdown-divider
-              a.dropdown-item(href='#')
-                strong Jane Smith
-                span.small.float-right.text-muted 11:21 AM
-                .dropdown-message.small
-                  | I was wondering if you could meet for an appointment at 3:00 instead of 4:00. Thanks!
-              .dropdown-divider
-              a.dropdown-item(href='#')
-                strong John Doe
-                span.small.float-right.text-muted 11:21 AM
-                .dropdown-message.small
-                  | I've sent the final files over to you for review. When you're able to sign off of them let me know and we can discuss distribution.
-              .dropdown-divider
-              a.dropdown-item.small(href='#') View all messages
-          li.nav-item.dropdown
-            a#alertsDropdown.nav-link.dropdown-toggle.mr-lg-2(href='#', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
-              i.fa.fa-fw.fa-bell
-              span.d-lg-none
-                | Alerts
-                span.badge.badge-pill.badge-warning 6 New
-              span.indicator.text-warning.d-none.d-lg-block
-                i.fa.fa-fw.fa-circle
-            .dropdown-menu(aria-labelledby='alertsDropdown')
-              h6.dropdown-header New Alerts:
-              .dropdown-divider
-              a.dropdown-item(href='#')
-                span.text-success
-                  strong
-                    i.fa.fa-long-arrow-up.fa-fw
-                    | Status Update
-                span.small.float-right.text-muted 11:21 AM
-                .dropdown-message.small This is an automated server response message. All systems are online.
-              .dropdown-divider
-              a.dropdown-item(href='#')
-                span.text-danger
-                  strong
-                    i.fa.fa-long-arrow-down.fa-fw
-                    | Status Update
-                span.small.float-right.text-muted 11:21 AM
-                .dropdown-message.small This is an automated server response message. All systems are online.
-              .dropdown-divider
-              a.dropdown-item(href='#')
-                span.text-success
-                  strong
-                    i.fa.fa-long-arrow-up.fa-fw
-                    | Status Update
-                span.small.float-right.text-muted 11:21 AM
-                .dropdown-message.small This is an automated server response message. All systems are online.
-              .dropdown-divider
-              a.dropdown-item.small(href='#') View all alerts
-          li.nav-item
-            form.form-inline.my-2.my-lg-0.mr-lg-2
-              .input-group
-                input.form-control(type='text', placeholder='Search for...')
-                span.input-group-btn
-                  button.btn.btn-primary(type='button')
-                    i.fa.fa-search
-          li.nav-item
-            a.nav-link(data-toggle='modal', data-target='#exampleModal')
-              i.fa.fa-fw.fa-sign-out
-              | Logout
+    include ../public/graficos/pug/includes/navbar.pug
     .content-wrapper
       .container-fluid
         // Breadcrumbs
         ol.breadcrumb
           li.breadcrumb-item
-            a(href='#') Dashboard
-          li.breadcrumb-item.active Charts
+            a(href='/inicio') inicio
+          li.breadcrumb-item.active Gráficos
         // Area Chart Example
         .card.mb-3
           .card-header
@@ -121,7 +30,8 @@ html(lang='en')
             |  Area Chart Example
           .card-body
             canvas#myAreaChart(width='100%', height='30')
-          .card-footer.small.text-muted Updated yesterday at 11:59 PM
+          .card-footer.small.text-muted
+            | Updated yesterday at 11:59 PM
         .row
           .col-lg-8
             // Example Bar Chart Card
@@ -131,7 +41,8 @@ html(lang='en')
                 |  Bar Chart Example
               .card-body
                 canvas#myBarChart(width='100', height='50')
-              .card-footer.small.text-muted Updated yesterday at 11:59 PM
+              .card-footer.small.text-muted
+                | Updated yesterday at 11:59 PM
           .col-lg-4
             // Example Pie Chart Card
             .card.mb-3
@@ -140,28 +51,12 @@ html(lang='en')
                 |  Pie Chart Example
               .card-body
                 canvas#myPieChart(width='100%', height='100')
-              .card-footer.small.text-muted Updated yesterday at 11:59 PM
+              .card-footer.small.text-muted
+                | Updated yesterday at 11:59 PM
       // /.container-fluid
       // /.content-wrapper
-      footer.sticky-footer
-        .container
-          .text-center
-            small Copyright © Your Website 2017
-      // Scroll to Top Button
-      a.scroll-to-top.rounded(href='#page-top')
-        i.fa.fa-angle-up
-      // Logout Modal
-      #exampleModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='exampleModalLabel', aria-hidden='true')
-        .modal-dialog(role='document')
-          .modal-content
-            .modal-header
-              h5#exampleModalLabel.modal-title Ready to Leave?
-              button.close(type='button', data-dismiss='modal', aria-label='Close')
-                span(aria-hidden='true') ×
-            .modal-body Select "Logout" below if you are ready to end your current session.
-            .modal-footer
-              button.btn.btn-secondary(type='button', data-dismiss='modal') Cancel
-              a.btn.btn-primary(href='login.html') Logout
+      include ../public/graficos/pug/includes/footer.pug
+      
       // Bootstrap core JavaScript
       script(src='vendor/jquery/jquery.min.js')
       script(src='vendor/popper/popper.min.js')
