--- a/views/index.pug
+++ b/views/index.pug
@@ -29,18 +29,18 @@ html(lang='en')
         #navbarResponsive.collapse.navbar-collapse
           ul.navbar-nav.ml-auto
             li.nav-item
-              a.nav-link.js-scroll-trigger(href='/graphics') Download
+              a.nav-link.js-scroll-trigger(href='/graphics') Estadísticas Gráficas
             li.nav-item
-              a.nav-link.js-scroll-trigger(href='#features') Features
+              a.nav-link.js-scroll-trigger(href='#features') Recetas
             li.nav-item
-              a.nav-link.js-scroll-trigger(href='#contact') Contact
+              a.nav-link.js-scroll-trigger(href='#contact') Contactenos
     header.masthead
       .container.h-100
         .row.h-100
           .col-lg-7.my-auto
             .header-content.mx-auto
               h1.mb-5
-                | New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything else!
+                | Bienvenidos al Recetario Interactivo, conocerás las principales recetas por ciudad y por idiomas
               a.btn.btn-outline.btn-xl.js-scroll-trigger(href='#download') Start Now for Free!
           .col-lg-5.my-auto
             .device-container
