--- a/views/recetas.pug
+++ b/views/recetas.pug
@@ -1,2 +1,19 @@
 
-h1.mb-5 principales recetas por ciudad y por idiomas
+block content
+    h1 Recetas
+    p
+        a(href="/recetas/create") Crear nueva receta
+        -if(recetas.length > 0)
+        table
+            thead
+                tr
+                    th titulo
+                    th origen
+                    th
+                    th
+                    th
+                tbody
+                    -each item in personajes
+                    tr
+                        td #{item.name}
+                        td #{item.}
