mostrando producto individual
02-11-2017

--- a/views/index.pug
+++ b/views/index.pug
@@ -31,7 +31,7 @@ html(lang='en')
             li.nav-item
               a.nav-link.js-scroll-trigger(href='/graphics') Estadísticas Gráficas
             li.nav-item
-              a.nav-link.js-scroll-trigger(href='#features') Recetas
+              a.nav-link.js-scroll-trigger(href='/recetas') Recetas
             li.nav-item
               a.nav-link.js-scroll-trigger(href='#contact') Contactenos
     header.masthead
