--- a/views/show.pug
+++ b/views/show.pug
@@ -1,2 +1,4 @@
- 
-  a(href="/recetas") Volver atrás
+h1 #{receta.name} #{receta.origen}
+  div(style='white-space:pre;') #{receta.instrucciones}
+  br
+  a(href="/personajes") Volver atrás
