--- a/views/index.pug
+++ b/views/index.pug
@@ -41,7 +41,7 @@ html(lang='en')
             .header-content.mx-auto
               h1.mb-5
                 | Bienvenidos al Recetario Interactivo, conocerás las principales recetas por ciudad y por idiomas
-              a.btn.btn-outline.btn-xl.js-scroll-trigger(href='#download') Start Now for Free!
+              a.btn.btn-outline.btn-xl.js-scroll-trigger(href='/recetas') Mira las recetas
           .col-lg-5.my-auto
             .device-container
               .device-mockup.iphone6_plus.portrait.white
@@ -50,38 +50,9 @@ html(lang='en')
                    
                     img.img-fluid(src='img/demo-screen-1.jpg', alt='')
                   .button
-                   
-    section#download.download.bg-primary.text-center
-      .container
-        .row
-          .col-md-8.mx-auto
-            h2.section-heading Discover what all the buzz is about!
-            p Our app is available on any mobile device! Download now to get started!
-            .badges
-              a.badge-link(href='#')
-                img(src='img/google-play-badge.svg', alt='')
-              a.badge-link(href='#')
-                img(src='img/app-store-badge.svg', alt='')
-    section.cta
-      .cta-content
-        .container
-          h2
-            | Stop waiting.
-            br
-            | Start building.
-          a.btn.btn-outline.btn-xl.js-scroll-trigger(href='#contact') Let's Get Started!
-      .overlay
-
     footer
       .container
-        p © 2017 Start Bootstrap. All Rights Reserved.
-        ul.list-inline
-          li.list-inline-item
-            a(href='#') Privacy
-          li.list-inline-item
-            a(href='#') Terms
-          li.list-inline-item
-            a(href='#') FAQ
+        p © 2017 Antonio Marín.
     // Bootstrap core JavaScript
     script(src='vendor/jquery/jquery.min.js')
     script(src='vendor/popper/popper.min.js')
